--- a/Temp_Control_System/.project
+++ b/Temp_Control_System/.project
@@ -56,5 +56,21 @@
         <arguments>1.0-name-matches-false-false-*.wvproj</arguments>
       </matcher>
     </filter>
+    <filter>
+      <name>User</name>
+      <type>6</type>
+      <matcher>
+        <id>org.eclipse.ui.ide.multiFilter</id>
+        <arguments>1.0-name-matches-false-false-main_restruct.c</arguments>
+      </matcher>
+    </filter>
+    <filter>
+      <name>User</name>
+      <type>6</type>
+      <matcher>
+        <id>org.eclipse.ui.ide.multiFilter</id>
+        <arguments>1.0-name-matches-false-false-main-BK.c</arguments>
+      </matcher>
+    </filter>
   </filteredResources>
 </projectDescription>
